--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="foto">
         <div class="container">
-            <div class="zag_cheat"><img class="img_zag" src="images/cheatimg3232.png" alt=""></div>
+            <div class="zag_cheat"><img class="img_zag" src="images/cheatimg.png" alt=""></div>
             <nav class="menu_cheat">
                 <ul class="cheat_spis">
                     <li class="cheat_spis-item_2"><a href="#" class="link_cheat">Вход<span>/</span>Регистрация</a>
